impl find by zip code
